test/conformance/kuttl/generate/validation/clusterpolicy/immutable-clone/02-update.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: update-name.yaml
  shouldFail: true
- file: update-namespace.yaml
  shouldFail: true
