test/conformance/kuttl/generate/validation/clusterpolicy/immutable-clone/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: generate-update-clone
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
